[issue #208] Skyクラスの描画を実装

--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -584,6 +584,9 @@
     <Filter Include="Main\SceneManager\Scene\GameScene\ObjectManager\GameObjectManager\FieldManager\Ground\Effect">
       <UniqueIdentifier>{e7e66729-3153-452c-b4d8-9886a1dc5bd9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Main\SceneManager\Scene\GameScene\ObjectManager\GameObjectManager\FieldManager\Sky\Effect">
+      <UniqueIdentifier>{08a676f1-6e77-4316-be50-e3f5d22c69d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Library\DebugFont\Effect\DebugFont.fx">
@@ -597,6 +600,9 @@
     </FxCompile>
     <FxCompile Include="Resource\Effect\GameScene\Ground.fx">
       <Filter>Main\SceneManager\Scene\GameScene\ObjectManager\GameObjectManager\FieldManager\Ground\Effect</Filter>
+    </FxCompile>
+    <FxCompile Include="Resource\Effect\GameScene\Sky.fx">
+      <Filter>Main\SceneManager\Scene\GameScene\ObjectManager\GameObjectManager\FieldManager\Sky\Effect</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
